# hgvs-dataproviders-rest

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  restapi.py  setup.cfg  tox.ini  utarest.py
.github/workflows/: python-package.yml
sketches/: connect.py  main.py  other-docker.md  readme-draft.md  rest.py  uta.py
src/hgvs/dataproviders/rest/: utarest.py
src/hgvs_dataproviders_rest/: restapi.py  restclient.py
src/uta_restapi/: restapi.py  utarest.py
tests/: test_rest_vs_uta.py  test_restapi.py  test_restapi_vs_libpq.py  vcr_support.py
tests/cassettes/: test_acs_for_protein_seq_e.yaml  test_acs_for_protein_seq_ne.yaml  test_acs_for_protein_seq_ne_nonalphabetical.yaml  test_alignments_for_region_e.yaml  test_alignments_for_region_ne.yaml  test_alignments_region_e_params.yaml  test_alignments_region_ne_params.yaml  test_assembly_map_e.yaml  test_assembly_map_ne.yaml  test_codes_acs_for_protein_seq_e.yaml  test_codes_acs_for_protein_seq_ne.yaml  test_codes_acs_for_protein_seq_ne_nonalphabetical.yaml  test_codes_alignmemts_for_region_e_params.yaml  test_codes_alignments_for_region_e.yaml  test_codes_alignments_for_region_ne.yaml  test_codes_alignments_for_region_ne_params.yaml  test_codes_assembly_map_e.yaml  test_codes_assembly_map_ne.yaml  test_codes_gene_info_e.yaml  test_codes_gene_info_ne.yaml  test_codes_pro_ac_for_tx_ac_e.yaml  test_codes_pro_ac_for_tx_ac_e_none.yaml  test_codes_pro_ac_for_tx_ac_ne.yaml  test_codes_seq_e_indices.yaml  test_codes_seq_ne.yaml  test_codes_similar_transcripts_e.yaml  test_codes_similar_transcripts_e_none.yaml  test_codes_similar_transcripts_ne.yaml  test_codes_tx_exons_e.yaml  test_codes_tx_exons_e_params.yaml  test_codes_tx_exons_ne.yaml  test_codes_tx_exons_ne_params.yaml  test_codes_tx_for_gene_e.yaml  test_codes_tx_for_gene_ne.yaml  test_codes_tx_for_region_e.yaml  test_codes_tx_for_region_ne.yaml  test_codes_tx_identity_info_e.yaml  test_codes_tx_identity_info_ne.yaml  test_codes_tx_info_e.yaml  test_codes_tx_info_e_param.yaml  (+36 more)
